Widgets: Ensure tabs do not get extra margin added to them when embedded in other stylesheets

--- a/widgets/src/less/base/tabs.less
+++ b/widgets/src/less/base/tabs.less
@@ -2,8 +2,7 @@
 
 .digital-scout-tabs {
     padding-left: 0;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0;
     list-style: none;
     width: 100%;
     display: table;
